--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#6c63ff" />
     <meta
-      name="Saad Pasta Portfolio"
+      name="Ryan Pinto Portfolio"
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png?v8=qAJ44G5Bm7">
